@@ -3483,8 +3483,7 @@ sub cmdKill {
 
 	# The current attack code assumes that the target is a monster.
 	# So we must add the target into the %monsters hash.
-	$monsters{$target} = $players{$target};
-	main::attack($target);
+	attack($target);
 }
 
 return 1;
